--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/*
+fixme   not able to add classes easily to the root component
+        https://github.com/inertiajs/inertia-laravel/issues/370
+*/
+#app {
+    @apply relative flex min-h-screen flex-col items-stretch;
+}
